--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,277 +1,288 @@
-body{
-    margin: 0;
-   
+body {
+  margin: 0;
 }
-header{ 
-    display: flex;
-    padding-left: 5%;
+header {
+  display: flex;
+  padding-left: 5%;
 }
 header h1 {
-    font-size: 25px;
-    margin-left: 10px;
-    padding-top: 10px;
-    font-family: 'Roboto', sans-serif;
+  font-size: 25px;
+  margin-left: 10px;
+  padding-top: 10px;
+  font-family: "Roboto", sans-serif;
 }
-header span{
-    font-size: 13px;
+header span {
+  font-size: 13px;
 }
-.seite1{
-    height: 100vh;
-    /* background-color: green; */
-    background: url(../img/ilustracion_people.png) right/contain scroll no-repeat,url(../img/ilustracion1.png) right/contain scroll no-repeat;
+.seite1 {
+  height: 100vh;
+  /* background-color: green; */
+  background: url(../img/ilustracion_people.png) right/contain scroll no-repeat,
+    url(../img/ilustracion1.png) right/contain scroll no-repeat;
 }
 div h2 {
-    margin-left: 5%;
-    font-size: 70px;
-    margin-top: 290px;
-    font-weight: bolder;
-    font-family: 'Roboto', sans-serif;
+  margin-left: 5%;
+  font-size: 70px;
+  margin-top: 290px;
+  font-weight: bolder;
+  font-family: "Roboto", sans-serif;
 }
 div p {
-    margin-left: 5%;
-    margin-top: -30px;
-    font-size: 20px;
-    line-height: 1.5em;
+  margin-left: 5%;
+  margin-top: -30px;
+  font-size: 20px;
+  line-height: 1.5em;
 }
-div>img{
-    display: flex;
-    margin-left: 290px;
-    margin-top: -50px;
-    width: 40px;
+div > img {
+  display: flex;
+  margin-left: 290px;
+  margin-top: -50px;
+  width: 40px;
 }
-div p:nth-of-type(2){
-    color: rgb(255, 17, 121);
-    padding-top: 100px;
-    font-weight: bolder;
+div p:nth-of-type(2) {
+  color: rgb(255, 17, 121);
+  padding-top: 100px;
+  font-weight: bolder;
 }
 
 /*______ seite 2 ______*/
-section:nth-of-type(1){
-    height: 110vh;
-    background-color: yellow;
-    background: url(../img/images.jpg) center/contain scroll no-repeat;
+section:nth-of-type(1) {
+  height: 110vh;
+  background-color: yellow;
+  background: url(../img/images.jpg) center/contain scroll no-repeat;
 }
 /* _____ seite 3 ______ */
 section:nth-of-type(2) {
-    height: 110vh;
-    /* background-color: orange; */
+  height: 110vh;
+  /* background-color: orange; */
 }
-section:nth-of-type(2) article{
-    display: flex;
-    justify-content: space-around;
+section:nth-of-type(2) article {
+  display: flex;
+  justify-content: space-around;
 }
-section:nth-of-type(2) article h3{
-    margin-left: 5%;
-    width: 40%;
-    font-size: 80px;
-    
-    /* background-color: aqua; */
+section:nth-of-type(2) article h3 {
+  margin-left: 5%;
+  width: 40%;
+  font-size: 80px;
+
+  /* background-color: aqua; */
 }
-section:nth-of-type(2) article p{
-    width: 40%;
-    height: 40%;
-    /* background-color: red; */
-    font-size: 20px;
-    text-align: left;
-    margin-right: 5%;
-    margin-top: 10%;
-    line-height: 1.5em;
-    margin-left: -150px; 
-    
+section:nth-of-type(2) article p {
+  width: 40%;
+  height: 40%;
+  /* background-color: red; */
+  font-size: 20px;
+  text-align: left;
+  margin-right: 5%;
+  margin-top: 10%;
+  line-height: 1.5em;
+  margin-left: -150px;
 }
-section:nth-of-type(2) h4{
-    margin-left: 9%;
-    font-size: 65px;
+section:nth-of-type(2) h4 {
+  margin-left: 9%;
+  font-size: 65px;
 }
 /*______ seite 3 ______ */
+.group {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 50px 0 0 9%;
+  margin: 50px 0;
+}
+.group article {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.group article h5 {
+  padding-left: 10px;
+  font-size: 1.5em;
+  font-weight: 900;
+}
+.group article p {
+  width: 500px;
+  margin-left: 60px;
+}
 
-section:nth-of-type(3) {
-    height: 100vh;
-    background-color: peru;
-    /* display: flex; */
-    
-}
-section:nth-of-type(4){
-    height: 100vh;
-    background-color: rosybrown;
-    background: url(../img/step01.png) bottom left/contain scroll no-repeat;
-    background-size: 500px;
-    margin-left: 7%; 
-    
+/* section:nth-of-type(3) {
+  display: flex;
+  justify-content: space-around;
+  height: 50vh;
+  padding-left: 15%;
+  background-color: peru;
+} */
+
+/* ______seite 5 ______ */
+section:nth-of-type(4) {
+  height: 100vh;
+  background-color: rosybrown;
+  background: url(../img/step01.png) bottom left/contain scroll no-repeat;
+  background-size: 500px;
+  margin-left: 7%;
 }
 
-/* ______seite 4 ______ */
-
-
-
-section:nth-of-type(4)>h1{
-    text-align: center;
-    font-size: 60px;
-    margin-top: 0;
-    padding-top: 20px;
+section:nth-of-type(4) > h1 {
+  text-align: center;
+  font-size: 60px;
+  margin-top: 0;
+  padding-top: 20px;
 }
-section:nth-of-type(4) p:nth-of-type(1){
-    text-align: center;
-    font-size: 28px;
+section:nth-of-type(4) p:nth-of-type(1) {
+  text-align: center;
+  font-size: 28px;
 }
-section:nth-of-type(4) p:nth-of-type(2){
-    margin-left: 50%;
-    margin-top: 7%;
-    font-size: 50px;
-    font-weight: bold;
-    color: #dddddd;
-  
+section:nth-of-type(4) p:nth-of-type(2) {
+  margin-left: 50%;
+  margin-top: 7%;
+  font-size: 50px;
+  font-weight: bold;
+  color: #dddddd;
 }
-section:nth-of-type(4) img{
-    margin-left: 50%;
+section:nth-of-type(4) img {
+  margin-left: 50%;
 }
-section:nth-of-type(4) h2{
-    margin-left: 50%;
+section:nth-of-type(4) h2 {
+  margin-left: 50%;
 }
-section:nth-of-type(4) p:nth-of-type(3){
-    margin-left: 50%;
-    line-height: 1.7em;
+section:nth-of-type(4) p:nth-of-type(3) {
+  margin-left: 50%;
+  line-height: 1.7em;
 }
 
 /* ______ seite 5 _______ */
 
-section:nth-of-type(5){
-    height: 80vh;
-    background-color: yellow;
-    background: url(../img/step02.png) right/contain scroll no-repeat; 
-    margin-right: 7%;
+section:nth-of-type(5) {
+  height: 80vh;
+  background-color: yellow;
+  background: url(../img/step02.png) right/contain scroll no-repeat;
+  margin-right: 7%;
 }
 
-section:nth-of-type(5) p:nth-of-type(1){
-    margin-left: 7%;
-    margin-right: 90%;
-    padding-top: 6%;
-    font-size: 50px;
-    font-weight: bold;
-    color: #dddddd;
-    
+section:nth-of-type(5) p:nth-of-type(1) {
+  margin-left: 7%;
+  margin-right: 90%;
+  padding-top: 6%;
+  font-size: 50px;
+  font-weight: bold;
+  color: #dddddd;
 }
-section:nth-of-type(5) img{
-    margin-left: 7%;
-    
+section:nth-of-type(5) img {
+  margin-left: 7%;
 }
-section:nth-of-type(5) h2{
-    margin-left: 7%;
-    margin-right: 70%;
+section:nth-of-type(5) h2 {
+  margin-left: 7%;
+  margin-right: 70%;
 }
-section:nth-of-type(5) p:nth-of-type(2){
-    margin-left: 7%;
-    line-height: 1.7em;
+section:nth-of-type(5) p:nth-of-type(2) {
+  margin-left: 7%;
+  line-height: 1.7em;
 }
 
 /* ______seite 6 ______*/
 
 section:nth-of-type(6) {
-    height: 80vh;
-    background-color: red;
-    background: url(../img/step03.png) left/contain scroll no-repeat;
-    margin-left: 7%;
+  height: 80vh;
+  background-color: red;
+  background: url(../img/step03.png) left/contain scroll no-repeat;
+  margin-left: 7%;
 }
-section:nth-of-type(6) p:nth-of-type(1){
-    margin-left: 50%;
-    margin-top: 7%;
-    font-size: 50px;
-    font-weight: bold;
-    color: #dddddd;
-    padding-top: 6%;
+section:nth-of-type(6) p:nth-of-type(1) {
+  margin-left: 50%;
+  margin-top: 7%;
+  font-size: 50px;
+  font-weight: bold;
+  color: #dddddd;
+  padding-top: 6%;
 }
-section:nth-of-type(6) img{
-    margin-left: 50%;
+section:nth-of-type(6) img {
+  margin-left: 50%;
 }
-section:nth-of-type(6) h2{
-    margin-left: 50%;
+section:nth-of-type(6) h2 {
+  margin-left: 50%;
 }
-section:nth-of-type(6) p:nth-of-type(2){
-    margin-left: 50%;
-    line-height: 1.7em;
+section:nth-of-type(6) p:nth-of-type(2) {
+  margin-left: 50%;
+  line-height: 1.7em;
 }
 
 /* ______seite 7______ */
 
 section:nth-of-type(7) {
-    height: 80vh;
-    background-color: peru;
-    background: url(../img/step04.png) right/contain scroll no-repeat;
-    margin-right: 7%;
+  height: 80vh;
+  background-color: peru;
+  background: url(../img/step04.png) right/contain scroll no-repeat;
+  margin-right: 7%;
 }
 
-section:nth-of-type(7) p:nth-of-type(1){
-    margin-left: 7%;
-    margin-right: 90%;
-    padding-top: 8%;
-    font-size: 50px;
-    font-weight: bold;
-    color: #dddddd;
-    
+section:nth-of-type(7) p:nth-of-type(1) {
+  margin-left: 7%;
+  margin-right: 90%;
+  padding-top: 8%;
+  font-size: 50px;
+  font-weight: bold;
+  color: #dddddd;
 }
-section:nth-of-type(7) img{
-    margin-left: 7%;
-    
+section:nth-of-type(7) img {
+  margin-left: 7%;
 }
-section:nth-of-type(7) h2{
-    margin-left: 7%;
-    margin-right: 70%;
+section:nth-of-type(7) h2 {
+  margin-left: 7%;
+  margin-right: 70%;
 }
-section:nth-of-type(7) p:nth-of-type(2){
-    margin-left: 7%;
-    line-height: 1.7em;
+section:nth-of-type(7) p:nth-of-type(2) {
+  margin-left: 7%;
+  line-height: 1.7em;
 }
 
 /* ______ footer ______ */
 
-
-footer{
-    height: 80vh;
-    /* background-color: purple; */
+footer {
+  height: 80vh;
+  /* background-color: purple; */
 }
 footer h1 {
-    text-align: center;
-    font-size: 60px;
-    padding-top: 5%;
-    font-weight: bolder;
-} 
-footer p:nth-of-type(1){
-    text-align: center;
-    font-size: 28px;
+  text-align: center;
+  font-size: 60px;
+  padding-top: 5%;
+  font-weight: bolder;
 }
-footer input{
-    text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-    height: 7%;
-    font-size: 20px;
-    margin-top: 50px;
-    box-shadow: 0px 0px 5px blue;
-    border-style: none;
+footer p:nth-of-type(1) {
+  text-align: center;
+  font-size: 28px;
 }
-footer a{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    width: 200px;
-    height: 7%;
-    background-color: #ff3571;
-    text-align: center;    
-    border-radius: 5px;
-    text-decoration: none;
-    color: white;
-    padding-top: 20px;
+footer input {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  height: 7%;
+  font-size: 20px;
+  margin-top: 50px;
+  box-shadow: 0px 0px 5px blue;
+  border-style: none;
 }
-footer a:hover{
-    color: lightpink;
-    background:linear-gradient(to top right,red,blue );
+footer a {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  width: 200px;
+  height: 7%;
+  background-color: #ff3571;
+  text-align: center;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  padding-top: 20px;
 }
-footer p:nth-of-type(2){
-    display: inline-flex;
-    font-size: 20px;
-    padding-left: 7%;
-    padding-top: 100px;
+footer a:hover {
+  color: lightpink;
+  background: linear-gradient(to top right, red, blue);
+}
+footer p:nth-of-type(2) {
+  display: inline-flex;
+  font-size: 20px;
+  padding-left: 7%;
+  padding-top: 100px;
 }
